# ProteinTDA

./: .gitignore  conversions.py  data_conversions.py  download_stereo_chemical_props.sh  esmfold_finetune.py  load_dataset.py  loss.py  main.py  model_config.py  notes.txt  optuna_tda.db  out.txt  output_shapes.txt  persistence.py  proteinnet_download.py  proteinnet_graph.py  pyproject.toml  readme.md  requirements.txt  sidechainnet_graph.py  sidechainnet_utils.py
proteinnet_data/: proteinnet_parser.py
scripts/: _python.sh  build_minifold_wheel.py  build_vpd.sh  download_stereo_chemical_props.py  download_stereo_chemical_props.sh  install_requirements.py  install_torch.py  setup.sh
scripts/lib/: venv.sh
scripts/windows/: _common.ps1  build_vpd.ps1  setup.ps1
src/: config.py  data_conversions.py  esm_cache.py  esmfold_finetune.py  kfold_runner.py  loss.py  main.py  minifold_finetune.py  minifold_predict.py  model_config.py  optimize.py  optuna.py  persistence.py  test_vpd_loss.py  vpd_macros.py
src/proteintda/: config.py
src/proteintda/minifold/: loss.py  pipeline.py  runner.py
src/python/: data_conversions.py
src/tests/: binning_metrics.py  mlp_output.txt  mlp_test.py  plotting.py  profile_pipeline.py  spearman.py  test_batch_speed.py  test_tda_loss.py  test_utils.py  test_vpd_loss.py  test_wasserstein_loss.py
vpd/: __init__.py  pyproject.toml  setup.py
vpd/src/: bindings.cpp  heat_flow.cpp  heat_kernel.cpp  heat_kernel_builder.cpp  heat_rff.cpp  straight_through.cpp  utils.cpp  vpd.cpp
wheels/: minifold-0.1.0-py3-none-any.whl
(+35 files in other folders)
